# LeetCode

./: CMakeLists.txt  a.cpp  test.cpp  test.h
Array/: 1014. 最佳观光组合.py  1051.HeightChecker.cpp  11. 盛最多水的容器.py  11.ContainerWithMostWater.cpp  1122.RelativeSortArray.cpp  1160.FindWordsThatCanBeFormedbyCharacters.cpp  118.Pascal'sTriangle.cpp  119.Pascal'sTriangleII.cpp  1222. 可以攻击国王的皇后.py  1233. 删除子文件夹.py  1248. 统计「优美子数组」.py  1287. 有序数组中出现次数超过 25% 的元素.py  1295.FindNumberswithEvenNumberofDigits.cpp  1300. 转变数组后最接近目标值的数组和.py  1431. 拥有最多糖果的孩子.py  15. 三数之和.py  15.3Sum.cpp  16. 最接近的三数之和.py  16.3SumClosest.cpp  18.4Sum.cpp  215. 数组中的第 K 个最大元素.py  26.RemoveDuplicatesfromSortedArray.cpp  27.RemoveElement.cpp  283. Move Zeroes.cpp  289. 生命游戏.cpp  31.next-permutation.cpp  33. 搜索旋转排序数组.py  33.search-in-rotated-sorted-array.cpp  34.find-first-and-last-position-of-element-in-sorted-array.cpp  35. 搜索插入位置.py  35.SearchInsertPosition.cpp  39.combination-sum.cpp  4.MedianofTwoSortedArrays.cpp  40.combination-sum-ii.cpp  41. 缺失的第一个正数.py  41.first-missing-positive.cpp  42.trapping-rain-water.cpp  45.jump-game-ii.cpp  48.rotate-image.cpp  495. 提莫攻击.py  (+19 more)
Array/ArrayDesc/: test markdown.md
Backtracking/: 17. 电话号码的字母组合.py  46. Permutations.py
BitOperation/: 136. 只出现一次的数字.py  231. 2 的幂.py  461. 汉明距离.py  477. 汉明距离总和.py  779. 第 K 个语法符号.py
Contest/: 1374. 生成每种字符都是奇数个的字符串.cpp  1375. 灯泡开关 III.cpp  LCP 01. 猜数字.py  LCP 02. 分式化简.py
Contest/week-197/: 5460. 好数对的数目.py  5461. 仅含 1 的子串数.py
Design/: 146. LRU 缓存机制.py  155. 最小栈.py  173. 二叉搜索树迭代器.py  297. 二叉树的序列化与反序列化.py  460. LFU 缓存.cpp
DynamicProgramming/: 10. 正则表达式匹配.py  120. 三角形最小路径和.py  121.BestTimetoBuyandSellStock.cpp  123. 买卖股票的最佳时机 III.py  139. 单词拆分.py  152. 乘积最大子数组.py  174. 地下城游戏.py  188. 买卖股票的最佳时机 IV.py  198. 打家劫舍.py  213. 打家劫舍 II.py  221. 最大正方形.py  309. 最佳买卖股票时机含冷冻期.py  32. 最长有效括号.py  413. 等差数列划分.py  44. 通配符匹配.py  466. 统计重复个数.py  5. 最长回文子串.py  518. 零钱兑换 II.py  53. Maximum Subarray.cpp  53. 最大子序和.py  53.MaximumSubarray.cpp  62. 不同路径.py  63. 不同路径 II.py  64. 最小路径和.py  70. 爬楼梯.py  70.ClimbingStairs.cpp  72. 编辑距离.cpp  813. 最大平均值和的分组.py  877.Stone Game.cpp  96. 不同的二叉搜索树.py  97. 交错字符串.py  983. 最低票价.py  CMakeLists.txt  面试题 08.11. 硬币.py
Hash Table/: 136. Single Number.cpp  202. Happy Number.cpp  299. 猜数字游戏.py  350. 两个数组的交集 II.py  451. 根据字符出现频率排序.py  49. 字母异位词分组.py  645. 错误的集合.py  970. 强整数.py  974. 和可被 K 整除的子数组.py
LeetCode.si4project/: LeetCode.sip_sym  LeetCode.sip_xab  LeetCode.sip_xad  LeetCode.sip_xc  LeetCode.sip_xf  LeetCode.sip_xm  LeetCode.sip_xr  LeetCode.sip_xsb  LeetCode.sip_xsd  LeetCode.siproj  LeetCode.siwork
LeetCode.si4project/cache/parse/: Array_MedianofTwoSortedArrays.cpp.sisc  Array_TwoSum.cpp.sisc  cmake-build-debug_CMakeFiles_3.14.2_CompilerIdCXX_CMakeCXXCompilerId.cpp.sisc  cmake-build-debug_CMakeFiles_3.14.2_CompilerIdC_CMakeCCompilerId.c.sisc  cmake-build-debug_CMakeFiles_feature_tests.c.sisc  (+3 more)
LinkedList/: 142. 环形链表 II.py  160. 相交链表.py  19. 删除链表的倒数第 N 个节点.py  2. 两数相加.py  21. 合并两个有序链表.py  23. 合并 K 个排序链表.py  25. K 个一组翻转链表.py  445. 两数相加 II.py  725. 分隔链表.py  817. 链表组件.py  876. 链表的中间结点.cpp  92. 反转链表 II.py  面试题 24. 反转链表.py
SQL/: 176. 第二高的薪水.sql  177. 第 N 高的薪水.sql  178. 分数排名.sql  183. 从不订购的客户.sql
Search/: 1028. 从先序遍历还原二叉树.py  1095. 山脉数组中查找目标值.py  126. 单词接龙 II.py  154. 寻找旋转排序数组中的最小值 II.py  199. 二叉树的右视图.py  210. 课程表 II.py  240. 搜索二维矩阵 II.py  287. 寻找重复数.py  29. 两数相除.py  374. 猜数字大小.py  378. 有序矩阵中第 K 小的元素.py  4. 寻找两个正序数组的中位数.py  542. 01 矩阵.py  547. 朋友圈.txt  74. 搜索二维矩阵.py
Sort/: 315. 计算右侧小于当前元素的个数.cpp  912. 排序数组.cpp
Stack/: 1190. 反转每对括号间的子串.py  394. 字符串解码.py  496. 下一个更大元素 I.py  739. 每日温度.py  84. 柱状图中最大的矩形.py  844. 比较含退格的字符串.py  921. 使括号有效的最少添加.py  946. 验证栈序列.cpp
String/: 13.RomantoInteger.cpp  1328. 破坏回文串.py  14. 最长公共前缀.py  14.LongestCommonPrefix.cpp  151. 翻转字符串里的单词.py  165. 比较版本号.py  20.ValidParentheses.cpp  22. 括号生成.cpp  28.ImplementstrStr.cpp  3. 无重复字符的最长子串.py  415. 字符串相加.py  43. 字符串相乘.cpp  5. 最长回文子串.py  551. 学生出勤记录 I.py  680. 验证回文字符串 Ⅱ.py  76. 最小覆盖子串.py  8. 字符串转换整数 (atoi).cpp  833. 字符串中的查找与替换.py  CMakeLists.txt
Tree/: 101. 对称二叉树.py  102. 二叉树的层序遍历.py  103. 二叉树的锯齿形层次遍历.py  105. 从前序与中序遍历序列构造二叉树.py  108. 将有序数组转换为二叉搜索树.py  124. 二叉树中的最大路径和.py  144. 二叉树的前序遍历.py  230. 二叉搜索树中第 K 小的元素.py  236. 二叉树的最近公共祖先.py  572. 另一个树的子树.py  783. 二叉搜索树节点最小距离.py  872. 叶子相似的树.py  94. 二叉树的中序遍历.py  98. 验证二叉搜索树.py
bytedance/: 三数之和.cpp  复原IP地址.cpp  字符串的排列.cpp  岛屿的最大面积.cpp  搜索旋转排序数组.cpp  数组中的第 K 个最大元素.cpp  无重复字符的最长子串.cpp  最长公共前缀.cpp  最长连续序列.cpp  最长连续递增序列.cpp  简化路径.cpp  翻转字符串里的单词.cpp
graph/: 1162. 地图分析.cpp  785. 判断二分图.py  990. 等式方程的可满足性.py
greed/: 1253. 重构 2 行二进制矩阵.py  334. 递增的三元子序列.py  45. 跳跃游戏 II.py  649. Dota2 参议院.py  738. 单调递增的数字.py  763. 划分字母区间.py  860. 柠檬水找零.py
interview/: 1013.cpp  1071.字符串的最大公因子.cpp  1160. 拼写单词.cpp  121.买卖股票最佳时间.cpp  169.多数元素.cpp  3.数组中重复数字.cpp  409. 最长回文串.cpp  543.二叉树的直径.cpp  57.cpp  695.岛屿的最大面积.cpp  820. 单词的压缩编码.cpp  836. 矩形重叠.cpp  914. 卡牌分组.cpp  999. 车的可用捕获量.cpp  CMakeLists.txt  剑指 Offer 09. 用两个栈实现队列.py  面试题 01.06. 字符串压缩.cpp  面试题 02.01. 移除重复节点.py  面试题 04.03. 特定深度节点链表.py  面试题 05. 替换空格.cpp  面试题 05.06. 整数转换.py  面试题 06. 从尾到头打印链表.cpp  面试题 09. 用两个栈实现队列.cpp  面试题 10- I. 斐波那契数列.cpp  面试题 10.01. 合并排序的数组.py  面试题 11. 旋转数组的最小数字.py  面试题 12. 矩阵中的路径.py  面试题 13. 机器人的运动范围.cpp  面试题 14- I. 剪绳子.py  面试题 16.10. 生存人数.py  面试题 16.11. 跳水板.py  面试题 16.18. 模式匹配.py  面试题 17.09. 第 k 个数.py  面试题 17.13. 恢复空格.py  面试题 40. 最小的 k 个数.cpp  面试题 46. 把数字翻译成字符串.py  面试题 51. 数组中的逆序对.py  面试题 54. 二叉搜索树的第 k 大节点.py  面试题 55 - I. 二叉树的深度.py  面试题 56 - I. 数组中数字出现的次数.py  (+5 more)
math/: 1317. 将整数转换为两个无零整数的和.py  202. 快乐数.py  283. 移动零.py  372. 超级次方.py  423. 从英文中重建数字.py  50. Pow(x, n).py  537. 复数乘法.py  69. x 的平方根.py  7. Reverse Integer.cpp  7. 整数反转.py  824. 山羊拉丁文.py  9. 回文数.py
