cmake_minimum_required(VERSION 3.14)
project(LeetCode)

set(CMAKE_CXX_STANDARD 14)

add_executable(TwoSum Array/TwoSum.cpp)
add_executable(MedianofTwoSortedArrays Array/MedianofTwoSortedArrays.cpp)
add_executable(NationTrip ByteDance/NationTrip.cpp)
add_executable(Island ByteDance/Island.cpp)
add_executable(String ByteDance/String.cpp)
add_executable(ContainerWithMostWater Array/11.ContainerWithMostWater.cpp)
add_executable(3Sum Array/15.3Sum.cpp)
add_executable(3SumClosest Array/16.3SumClosest.cpp)