cmake_minimum_required(VERSION 3.14)
project(LeetCode)

set(CMAKE_CXX_STANDARD 14)

add_executable(TwoSum 1.TwoSum.cpp)
add_executable(MedianofTwoSortedArrays 4.MedianofTwoSortedArrays.cpp)
add_executable(ContainerWithMostWater 11.ContainerWithMostWater.cpp)
add_executable(3Sum 15.3Sum.cpp)
add_executable(3SumClosest 16.3SumClosest.cpp)
add_executable(4Sum 18.4Sum.cpp)
add_executable(RemoveDuplicatesfromSortedArray 26.RemoveDuplicatesfromSortedArray.cpp)
add_executable(RemoveElement 27.RemoveElement.cpp)
add_executable(FlippinganImage 832.FlippinganImage.cpp)
add_executable(SortArrayByParity 905.SortArrayByParity.cpp)
add_executable(SquaresofaSortedArray 977.SquaresofaSortedArray.cpp)
add_executable(ArrayPartition_I 561.ArrayPartition_I.cpp)
add_executable(HeightChecker 1051.HeightChecker.cpp)
add_executable(FindWordsThatCanBeFormedbyCharacters 1160.FindWordsThatCanBeFormedbyCharacters.cpp)
add_executable(SortArrayByParity_II 922.SortArrayByParity_II.cpp)