cmake_minimum_required(VERSION 3.14)
project(LeetCode)

set(CMAKE_CXX_STANDARD 14)

add_executable(TwoSum 1.TwoSum.cpp)
add_executable(MedianofTwoSortedArrays 4.MedianofTwoSortedArrays.cpp)
add_executable(ContainerWithMostWater 11.ContainerWithMostWater.cpp)
add_executable(3Sum 15.3Sum.cpp)
add_executable(3SumClosest 16.3SumClosest.cpp)
add_executable(4Sum 18.4Sum.cpp)
add_executable(RemoveDuplicatesfromSortedArray 26.RemoveDuplicatesfromSortedArray.cpp)
add_executable(RemoveElement 27.RemoveElement.cpp)
add_executable(FlippinganImage 832.FlippinganImage.cpp)
add_executable(SortArrayByParity 905.SortArrayByParity.cpp)
add_executable(SquaresofaSortedArray 977.SquaresofaSortedArray.cpp)
add_executable(ArrayPartition_I 561.ArrayPartition_I.cpp)
add_executable(HeightChecker 1051.HeightChecker.cpp)
add_executable(FindWordsThatCanBeFormedbyCharacters 1160.FindWordsThatCanBeFormedbyCharacters.cpp)
add_executable(SortArrayByParity_II 922.SortArrayByParity_II.cpp)
add_executable(FibonacciNumber 509.FibonacciNumber.cpp)
add_executable(SearchInsertPosition 35.SearchInsertPosition.cpp)
add_executable(RelativeSortArray 1122.RelativeSortArray.cpp)
add_executable(PlusOne 66.PlusOne.cpp)
add_executable(MergeSortedArray 88.MergeSortedArray.cpp)
add_executable(FindNumberswithEvenNumberofDigits 1295.FindNumberswithEvenNumberofDigits.cpp)
add_executable(PascalsTriangle 118.Pascal'sTriangle.cpp)
add_executable(PascalsTriangle_II 119.Pascal'sTriangleII.cpp)
add_executable(next-permutation 31.next-permutation.cpp)
add_executable(search-in-rotated-sorted-array 33.search-in-rotated-sorted-array.cpp)
add_executable(find-first-and-last-position-of-element-in-sorted-array 34.find-first-and-last-position-of-element-in-sorted-array.cpp)
add_executable(combination-sum 39.combination-sum.cpp)
add_executable(combination-sum-ii 40.combination-sum-ii.cpp)
add_executable(first-missing-positive 41.first-missing-positive.cpp)
add_executable(trapping-rain-water 42.trapping-rain-water.cpp)
add_executable(jump-game-ii 45.jump-game-ii.cpp)
add_executable(rotate-image 48.rotate-image.cpp)
add_executable(spiral-matrix 54.spiral-matrix.cpp)
add_executable(merge-intervals 56.merge-intervals.cpp)