cmake_minimum_required(VERSION 3.14)

PROJECT(LeetCode)

set(CMAKE_CXX_STANDARD 14)

add_executable(RomantoInteger 13.RomantoInteger.cpp)
add_executable(LongestCommonPrefix 14.LongestCommonPrefix.cpp)
add_executable(ValidParentheses 20.ValidParentheses.cpp)
add_executable(ImplementstrStr 28.ImplementstrStr.cpp)